# pupil_tracking

./: .gitignore  .pre-commit-config.yaml  README.md  average_pupil_images.py  check_augmentation.py  crop_centered_images.py  dataset.py  dataset_sketch.py  draw_pupil_ROI.py  extract_frames.py  find_pupil.py  find_pupil_sketch.py  find_pupil_sketch2.py  label_points.py  labelme_json2png.py  make_gif.py  pupil_segmentation.py  pyproject.toml  requirements.txt  run_eval.py  run_inference.py  run_inference_dev.py  run_pupil_analysis.py  run_train.py  run_train_sketch.py  segment_pupil_sketch.py  setup.py  unet.py  unet_sketch.py  utils.py  write_label_csv.py
.github/workflows/: ci.yml
archive/: analyze_video.py  average_pupil_images.py  copy_labeled_frames.py  create_labeled_video.py  crop_and_adjust_labels.py  detect_edge_sketch.py  find_pupil_sketch.py  find_pupil_sketch2.py  fit_gaussian_sketch.py  label_points.py  label_points_dlc_format.py  plot_pupil_segment.py  run_eval.py  run_train.py  segment_pupil.py  segment_pupil_sketch.py  segment_pupil_sketch2.py  utils.py  write_label_csv.py
pupil_tracking/: extract_frames.py  run_pupil_analysis.py  unet.py
pupil_tracking/checkpoints/: training_log_unet_atn_resize_166pupils_thresh=0.7_iou=0.9158.txt  unet_atn_resize_166pupils_thresh=0.7_iou=0.9158.pth
tests/: test_cli_help.py  test_imports.py
