[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24.0",
  "ruff>=0.8",
  "pre-commit>=3",
  "build>=1",
]