[project]
name = "pupil-tracking"
version = "0.1.2"
description = "Automated mouse pupil segmentation and diameter analysis using UNet."
authors = [{ name = "Yue Zhao" }]
requires-python = ">=3.10"

dependencies = [
  "opencv-python>=4.12",
  "numpy>=2.1",
  "tqdm>=4.67",
  "pandas>=2.3",
  "Pillow>=11.0",
  "matplotlib>=3.10",
  "torch>=2.8",
  "torchvision>=0.23",
]

[project.scripts]
extract-frames = "extract_frames:main"
run-pupil-analysis = "run_pupil_analysis:main"

[tool.setuptools]
py-modules = ["extract_frames", "run_pupil_analysis", "dataset", "unet"]

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(
  ^archive/
| ^sketch.*\.py$
)
'''

[tool.ruff]
line-length = 100
exclude = ["archive", "sketch*.py"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24.0",
  "ruff>=0.8",
  "pre-commit>=3",
  "build>=1",
]